<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

 <View
     android:layout_marginTop="5dp"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="2dp"
     android:layout_margin="5dp"/>

 <TextView
     android:layout_marginTop="20dp"
     android:textSize="15sp"
     android:gravity="center"
     android:text="@string/laser_dust"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

 <TextView
     android:layout_margin="20dp"
     android:text="@string/date"
     android:textSize="20sp"
     android:gravity="center"
     android:id="@+id/DataTV"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />

 <LinearLayout
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">

  <TextView
      android:text="@string/pm2_5"
      android:textSize="28sp"
      android:layout_margin="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView
      android:id="@+id/PM2TV"
      android:text="@string/pm2_5_data"
      android:textSize="28sp"
      android:layout_margin="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView
      android:text="@string/ug_m3"
      android:textSize="28sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
 </LinearLayout>


 <LinearLayout
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">

  <TextView
      android:text="@string/pm10"
      android:textSize="28sp"
      android:layout_margin="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView
      android:id="@+id/PM10TV"
      android:text="@string/pm10_data"
      android:textSize="28sp"
      android:layout_margin="5dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  <TextView
      android:text="@string/ug_m3"
      android:textSize="28sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
 </LinearLayout>

<View
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_margin="5dp"/>

 <android.support.v7.widget.ListViewCompat
     android:id="@+id/listView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

 </android.support.v7.widget.ListViewCompat>


</LinearLayout>
