<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wegrzyn.marcin.dustsensorapp.DetailActivity">

    <TextView
        android:id="@+id/TV_data"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MON 22.02.2018 18.16" />

    <TextView
        android:id="@+id/TV_label_PM2"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pm2_5"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_PM2"
        style="@style/PM_Big_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/_0_0"
        app:layout_constraintEnd_toStartOf="@+id/TV_Unit1"
        app:layout_constraintTop_toBottomOf="@+id/TV_data"
        tools:text="264"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/TV_Unit1"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/unit_ug_m3"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/TV_label_PM10"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm10"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM10"
        app:layout_constraintEnd_toEndOf="@+id/TV_label_PM2" />

    <TextView
        android:id="@+id/TV_PM10"
        style="@style/PM_Big_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/_0_0"
        app:layout_constraintEnd_toStartOf="@+id/TV_Unit2"
        app:layout_constraintTop_toBottomOf="@+id/TV_PM2"
        tools:text="264"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/TV_Unit2"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/unit_ug_m3"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/TV_press_label"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_press"
        app:layout_constraintEnd_toEndOf="@+id/TV_label_PM10" />

    <TextView
        android:id="@+id/TV_press"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_0_0"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/TV_PM10"
        app:layout_constraintTop_toBottomOf="@+id/TV_PM10"
        tools:text="@string/_0_0" />

    <TextView
        android:id="@+id/TV_Unit3"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hpa"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_press"
        app:layout_constraintStart_toStartOf="@+id/TV_Unit2" />

    <TextView
        android:id="@+id/TV_temp_label"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_temp"
        app:layout_constraintEnd_toEndOf="@+id/TV_press_label" />

    <TextView
        android:id="@+id/TV_temp"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_0"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/TV_press"
        app:layout_constraintTop_toBottomOf="@+id/TV_press"
        tools:text="@string/_0_0" />

    <TextView
        android:id="@+id/TV_Unit4"
        style="@style/PM_Big_label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_temp"
        app:layout_constraintStart_toStartOf="@+id/TV_Unit3" />



</android.support.constraint.ConstraintLayout>
