<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/TV_label_PM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pm2_5"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM2"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_PM2"
        style="@style/PmStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/TV_Unit1"
        app:layout_constraintStart_toEndOf="@+id/TV_label_PM2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="64" />

    <TextView
        android:id="@+id/TV_Unit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/unit_ug_m3"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/TV_label_PM10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pm10"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM10"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_PM10"
        style="@style/PmStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TV_Unit2"
        app:layout_constraintStart_toEndOf="@+id/TV_label_PM10"
        app:layout_constraintTop_toBottomOf="@+id/TV_PM2"
        tools:text="295" />

    <TextView
        android:id="@+id/TV_Unit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/ug_m3"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_PM10"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/TV_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_temp"
        tools:text="27.01.2018 15:16"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_label_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/press"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_label_pressure"
        app:layout_constraintStart_toEndOf="@+id/TV_label_pressure"
        tools:text="1050"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/TV_label_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_label_pressure"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/TV_temp"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TV_label_temp"
        app:layout_constraintStart_toEndOf="@+id/TV_label_temp"
        tools:text="24"
        android:layout_marginLeft="8dp" />


</android.support.constraint.ConstraintLayout>